[package]
name = "dependency_runner"
description = "ldd for Windows - and more!"
version = "1.3.1"
authors = ["Marco Esposito <esposito@imfusion.com>"]
edition = "2021"
license = "LGPL-3.0-only"
repository = "https://github.com/marcoesposito1988/dependency_runner/"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["dll"]
exclude = [
    "test_data/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.10.1"
pelite = "0.10.0"
goblin = "0.10.2"
dataview = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
clap = { version = "4.5.48", features = ["derive"] }
serde_json = "1.0.145"
roxmltree = "0.21.1"
regex = "1.12.1"
msvc-demangler = "0.11.0"
fs-err = "3.1.3"

[target.'cfg(not(windows))'.dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
skim = "0.20.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "sysinfoapi", "ntdef", "ntstatus", "winnt", "minwindef"] }
ntapi = "0.4.1"
