[package]
name = "dependency_runner"
description = "ldd for Windows - and more!"
version = "1.5.0"
authors = ["Marco Esposito <esposito@imfusion.com>"]
edition = "2024"
license = "LGPL-3.0-only"
repository = "https://github.com/marcoesposito1988/dependency_runner/"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["dll"]
exclude = [
    "test_data/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multimap = "0.10.1"
pelite = "0.10.0"
goblin = "0.10.7"
dataview = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
roxmltree = "0.21.1"
regex = "1.12.4"
msvc-demangler = "0.11.0"
fs-err = "3.3.0"
glob = "0.3"

[target.'cfg(not(windows))'.dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
skim = "0.20.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "sysinfoapi", "ntdef", "ntstatus", "winnt", "minwindef"] }
ntapi = "0.4.2"
